--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
-"scripts": {
-  "build": "tsc",
-  "watch": "tsc --watch",              
-  "start": "node dist/index.js"
-}
-,
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "start": "node dist/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,6 +15,7 @@
   "dependencies": {
     "@grammyjs/conversations": "^1.2.0",
     "@grammyjs/menu": "^1.0.0",
+    "axios": "^1.7.9",
     "dotenv": "^10.0.0",
     "grammy": "^1.34.0"
   },
