--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ API_BASE_URL=https://your-api-url.com
 # Авторизация в telegram 
 API_TG_AUTH=api/v1/auth/doctor/telegram
 API_SEND_CODE=api/v1/auth/send-code
+API_CONFIRM_CODE=api/v1/auth/confirm
